--- a/client/src/app/components/sidebar/new-drawing-box/new-drawing-box.component.scss
+++ b/client/src/app/components/sidebar/new-drawing-box/new-drawing-box.component.scss
@@ -9,6 +9,7 @@
   align-self: center;
   font-size: 22px;
   font-family: Rubik, serif;
+  padding-top: 10px;
 }
 
 #saveButton,
